--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,104 @@ h5{font-weight:300;font-size:16px;line-height:24px;text-decoration:underline;col
 
 .navi {font-weight:500;font-style:italic;font-size:14px;margin-bottom:20px;}
 
+#cookieConsent {
+    background-color: rgba(20,20,20,0.95);
+    color: #ffffff;
+    padding: 20px;
+    font-size: 16px;
+    line-height: 1.6;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.3);
+    max-width: 100%;
+    margin: 0 auto;
+    border-top: 4px solid #077fcc;
+}
+
+#cookieConsent h2 {
+    font-size: 24px;
+    font-weight: 400;
+    color: #077fcc;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+#cookieConsent p {
+    margin: 10px 0;
+    font-size: 16px;
+    color: #ffffff;
+}
+
+#cookieConsent a {
+    color: #077fcc;
+    text-decoration: none;
+}
+
+#cookieConsent a:hover {
+    text-decoration: underline;
+    color: #077fcc;
+}
+
+#acceptCookies {
+    background-color: #077fcc;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+#acceptCookies:hover {
+    background-color: #005fa3;
+}
+
+#closeCookieConsent {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 28px;
+    color: white;
+}
+
+#closeCookieConsent:hover {
+    color: #ccc;
+}
+
+.button-container {
+    text-align: right;
+}
+
+@media only screen and (max-width:640px){
+    #cookieConsent {
+        padding: 15px;
+        font-size: 14px;
+    }
+
+    #cookieConsent h2 {
+        font-size: 20px;
+    }
+
+    #cookieConsent p {
+        font-size: 14px;
+    }
+
+    #acceptCookies {
+        padding: 8px 15px;
+        font-size: 14px;
+    }
+
+    #closeCookieConsent {
+        font-size: 24px;
+    }
+}
+
+
 @media only screen and (max-width:1150px){
 	.shapka_vn,.content,.footer_vn{max-width:930px;width:100%;}
 	.rek{width:890px;}
@@ -161,8 +259,6 @@ h5{font-weight:300;font-size:16px;line-height:24px;text-decoration:underline;col
 
 .last_stat a{padding:1px 10px;font-size:14px;border-bottom:2px solid #ffd324;}
 }
-
-
 
 
 
